# ace-the-agent

./: .env.example  .gitignore  README.md  ace.py  main.py  pyproject.toml
core/: agent.py  harness.py  state.py
llm/: client.py  parser.py
memory/: embedder.py  extractor.py  schema.py  service.py  store.py
runtime/: executor.py  logger.py  spinner.py
skills/core/: loader.py  models.py  registry.py  router.py
tools/: api_tools.py  command_tools.py  download_tools.py  file_tools.py  path_utils.py  process_tools.py  project_tools.py  registry.py  system_tools.py  web_search_tools.py
